# Linkedin-Scraper

./: .gitignore  README.md  jobs.csv  jobs.json  pyproject.toml  requirements.txt  setup.cfg
job_scraper/: __main__.py  scraper.py  utils.py
scraper/: __init__.py  __main__.py  logger.py  scraper.py  utils.py
