[metadata]
name = linkedin-scraper
version = 0.1.0
description = LinkedIn job scraper using Playwright + Stealth + Cloudscreaper
author = Umair
license = MIT

[options]
packages = find:
install_requires =
    beautifulsoup4
    pandas
    cloudscraper
    fake_useragent
    playwright
    playwright-stealth
    loguru

[options.entry_points]
console_scripts =
    linkedin-scraper = scraper.__main__:main
